force-app/main/default/objects/Survey_Response__c/fields/Survey_History__c.field-meta.xml
<CustomField>
    <fullName>Survey_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey History</label>
    <referenceTo>Survey_History__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>